feat: add payment entity and pagination
